fixed randomed/repicked/predicted icon spacing

--- a/src/components/Visualizations/Table/HeroImage.css
+++ b/src/components/Visualizations/Table/HeroImage.css
@@ -165,6 +165,14 @@
   }
 }
 
+.hoverIcon {
+  margin-left: 4px;
+}
+
+.hoverIcon:first-child {
+  margin-left: 8px;
+}
+
 .pvgnaGuideContainer {
   margin: auto;
 }
